@@ -1,33 +1,118 @@
 package io.kestra.core.runners;
 
+import java.security.GeneralSecurityException;
+import java.util.*;
+import java.util.function.Consumer;
 import com.google.common.collect.ImmutableMap;
+
+import io.kestra.core.exceptions.IllegalVariableEvaluationException;
 import io.kestra.core.models.Label;
 import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.executions.LoopRun;
 import io.kestra.core.models.executions.TaskRun;
-import io.kestra.core.models.flows.Flow;
+import io.kestra.core.models.flows.FlowInterface;
+import io.kestra.core.models.flows.GenericFlow;
 import io.kestra.core.models.flows.Input;
 import io.kestra.core.models.flows.State;
 import io.kestra.core.models.flows.input.SecretInput;
+import io.kestra.core.models.property.PropertyContext;
 import io.kestra.core.models.tasks.Task;
 import io.kestra.core.models.triggers.AbstractTrigger;
 import io.kestra.core.utils.ListUtils;
+import io.kestra.core.utils.MapUtils;
+
 import lombok.AllArgsConstructor;
 import lombok.With;
-
-import java.security.GeneralSecurityException;
-import java.util.AbstractMap;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
-import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 /**
  * Class for building {@link RunContext} variables.
  */
 public final class RunVariables {
     public static final String SECRET_CONSUMER_VARIABLE_NAME = "addSecretConsumer";
+    public static final String FIXTURE_FILES_KEY = "io.kestra.datatype:test_fixtures_files";
+    public static final String ENVS = "envs";
+
+    /**
+     * Explicit, sorted list of all dot-separated expression paths structurally available
+     * at runtime in a Kestra flow execution (e.g. {@code "flow.id"}, {@code "execution.startDate"},
+     * {@code "taskrun.value"}).
+     * <p>
+     * Dynamic keys whose children depend on the specific flow/execution ({@code inputs},
+     * {@code outputs}, {@code tasks}, {@code labels}, {@code vars}, {@code files}, {@code envs},
+     * {@code globals}) are included as top-level entries only — their children vary per run.
+     * <p>
+     * When {@link DefaultBuilder#build} changes (new field added, new context key introduced),
+     * this list must be updated to match. The test {@code RunVariablesContextPathsTest}
+     * catches drift by asserting that a full stub-built context exposes no paths absent from here.
+     */
+    public static final List<String> EXECUTION_CONTEXT_PATHS = List.of(
+        // Top-level dynamic keys — children are flow/execution-specific, not listed individually
+        "envs",
+        "files",
+        "globals",
+        "inputs",
+        "labels",
+        "outputs",
+        "tasks",
+        "vars",
+        // Execution
+        "execution",
+        "execution.id",
+        "execution.originalId",
+        "execution.outputs",
+        "execution.startDate",
+        "execution.state",
+        // Flow
+        "flow",
+        "flow.id",
+        "flow.namespace",
+        "flow.revision",
+        "flow.tenantId",
+        // ForEach/EachParallel/EachSequential iteration context (item.*)
+        "item",
+        "item.index",
+        "item.key",
+        "item.parent",
+        "item.parent.index",
+        "item.parent.key",
+        "item.parent.value",
+        "item.parents",
+        "item.value",
+        // Kestra configuration
+        "kestra",
+        "kestra.environment",
+        "kestra.url",
+        // Nearest flowable parent (first entry of parents list)
+        "parent",
+        "parent.task",
+        "parent.task.id",
+        "parent.taskrun",
+        "parent.taskrun.value",
+        // All flowable ancestors
+        "parents",
+        // Current task
+        "task",
+        "task.id",
+        "task.type",
+        // Current task run
+        "taskrun",
+        "taskrun.attemptsCount",
+        "taskrun.id",
+        "taskrun.iteration",
+        "taskrun.parentId",
+        "taskrun.startDate",
+        "taskrun.value"
+    );
+
+    /**
+     * Returns the sorted list of all dot-separated expression paths structurally available
+     * at runtime. See {@link #EXECUTION_CONTEXT_PATHS} for details.
+     */
+    public static List<String> allContextPaths() {
+        return EXECUTION_CONTEXT_PATHS;
+    }
+
+
 
     /**
      * Creates an immutable map representation of the given {@link Task}.
@@ -42,6 +127,21 @@ public final class RunVariables {
         );
     }
 
+    public static Map<String, Object> executionFormattedOutputMap(TaskRun taskRun, Map<String, Object> outputs) {
+        return Optional.ofNullable(outputs)
+            .map(
+                o -> Map.of(
+                    "outputs",
+                    (Object) Map.of(
+                        taskRun.getTaskId(),
+                        Optional.ofNullable(taskRun.getValue())
+                            .map(v -> Map.of(v, (Object) o))
+                            .orElse(o)
+                    )
+                )
+            ).orElse(Collections.emptyMap());
+    }
+
     /**
      * Creates an immutable map representation of the given {@link TaskRun}.
      *
@@ -49,7 +149,7 @@ public final class RunVariables {
      * @return a new immutable {@link Map}.
      */
     static Map<String, Object> of(final TaskRun taskRun) {
-        ImmutableMap.Builder<String, Object> builder = ImmutableMap.<String, Object>builder()
+        ImmutableMap.Builder<String, Object> builder = ImmutableMap.<String, Object> builder()
             .put("id", taskRun.getId())
             .put("startDate", taskRun.getState().getStartDate())
             .put("attemptsCount", taskRun.getAttempts() == null ? 0 : taskRun.getAttempts().size());
@@ -70,21 +170,21 @@ public final class RunVariables {
     }
 
     /**
-     * Creates an immutable map representation of the given {@link Flow}.
+     * Creates an immutable map representation of the given {@link FlowInterface}.
      *
      * @param flow The flow from which to create variables.
      * @return a new immutable {@link Map}.
      */
-    static Map<String, Object> of(final Flow flow) {
+    static Map<String, Object> of(final FlowInterface flow) {
         ImmutableMap.Builder<String, Object> builder = ImmutableMap.builder();
         builder.put("id", flow.getId())
-               .put("namespace", flow.getNamespace());
+            .put("namespace", flow.getNamespace());
 
         Optional.ofNullable(flow.getRevision())
-            .ifPresent(revision ->  builder.put("revision", revision));
+            .ifPresent(revision -> builder.put("revision", revision));
 
         Optional.ofNullable(flow.getTenantId())
-            .ifPresent(tenantId ->  builder.put("tenantId", tenantId));
+            .ifPresent(tenantId -> builder.put("tenantId", tenantId));
 
         return builder.build();
     }
@@ -96,10 +196,79 @@ public final class RunVariables {
      * @return a new immutable {@link Map}.
      */
     static Map<String, Object> of(final AbstractTrigger trigger) {
-        return ImmutableMap.of(
+        return Map.of(
             "id", trigger.getId(),
             "type", trigger.getType()
         );
+    }
+
+    /**
+     * Creates an immutable map representation of the given {@link LoopRun}.
+     */
+    static Map<String, Object> of(LoopRun loopRun) {
+        Map<String, Object> loopRunMap = HashMap.newHashMap(3);
+        loopRunMap.put("index", loopRun.index());
+        if (loopRun.key() != null) {
+            loopRunMap.put("key", loopRun.key());
+        }
+        loopRunMap.put("value", loopRun.value());
+        if (loopRun.parents() != null) {
+            loopRunMap.put("parent", of(loopRun.parents().getLast()));
+            List<Map<String, Object>> parents = new ArrayList<>();
+            loopRun.parents().forEach(parent -> parents.add(of(parent)));
+            loopRunMap.put("parents", parents);
+        }
+        return loopRunMap;
+    }
+
+    private static Map<String, Object> of(LoopRun.Parent parent) {
+        Map<String, Object> parentMap = HashMap.newHashMap(3);
+        parentMap.put("index", parent.index());
+        if (parent.key() != null) {
+            parentMap.put("key", parent.key());
+        }
+        parentMap.put("value", parent.value());
+        return parentMap;
+    }
+
+    /**
+     * Returns an immutable map representation of the given {@link Execution}.
+     */
+    static Map<String, Object> of(Execution execution) {
+        ImmutableMap.Builder<String, Object> executionMap = ImmutableMap.builder();
+
+        executionMap.put("id", execution.getId());
+
+        if (execution.getState() != null) { // can occur in tests
+            executionMap.put("state", execution.getState().getCurrent());
+        }
+
+        Optional.ofNullable(execution.getState()).map(State::getStartDate)
+            .ifPresent(startDate -> executionMap.put("startDate", startDate));
+
+        Optional.ofNullable(execution.getOriginalId())
+            .ifPresent(originalId -> executionMap.put("originalId", originalId));
+
+
+        if (execution.getOutputs() != null) {
+            executionMap.put("outputs", execution.getOutputs());
+        }
+
+        return executionMap.build();
+    }
+
+    /**
+     * Returns an immutable map representation of the given {@link KestraConfiguration}.
+     */
+    static Map<String, String> of(KestraConfiguration kestraConfiguration) {
+        Map<String, String> kestra = HashMap.newHashMap(2);
+        if (kestraConfiguration.environment() != null) {
+            kestra.put("environment", kestraConfiguration.environment());
+        }
+        if (kestraConfiguration.url() != null) {
+            kestra.put("url", kestraConfiguration.url());
+        }
+        return kestra;
     }
 
     /**
@@ -107,9 +276,11 @@ public final class RunVariables {
      */
     public interface Builder {
 
-        Builder withFlow(Flow flow);
+        Builder withFlow(FlowInterface flow);
 
         Builder withInputs(Map<String, Object> inputs);
+
+        Builder withOutputs(Map<String, Object> outputs);
 
         Builder withTask(Task task);
 
@@ -129,13 +300,18 @@ public final class RunVariables {
 
         Builder withSecretInputs(List<String> secretInputs);
 
+        Builder withKestraConfiguration(KestraConfiguration kestraConfiguration);
+
         /**
          * Builds the immutable map of run variables.
          *
-         * @param logger    The {@link RunContextLogger logger}
-         * @return          The immutable map of variables.
+         * @param logger The {@link RunContextLogger logger}
+         * @return The immutable map of variables.
          */
-        Map<String, Object> build(final RunContextLogger logger);
+        Map<String, Object> build(RunContextLogger logger, PropertyContext propertyContext);
+    }
+
+    public record KestraConfiguration(String environment, String url) {
     }
 
     /**
@@ -145,7 +321,7 @@ public final class RunVariables {
     @With
     public static class DefaultBuilder implements RunVariables.Builder {
 
-        protected Flow flow;
+        protected FlowInterface flow;
         protected Task task;
         protected Execution execution;
         protected TaskRun taskRun;
@@ -153,10 +329,12 @@ public final class RunVariables {
         protected boolean decryptVariables = true;
         protected Map<String, Object> variables;
         protected Map<String, Object> inputs;
+        protected Map<String, Object> outputs;
         protected Map<String, ?> envs;
         protected Map<?, ?> globals;
         private final Optional<String> secretKey;
         private List<String> secretInputs;
+        private KestraConfiguration kestraConfiguration;
 
         public DefaultBuilder() {
             this(Optional.empty());
@@ -166,19 +344,17 @@ public final class RunVariables {
             this.secretKey = secretKey;
         }
 
+        // Note: for performance reason, cloning maps should be avoided as much as possible.
         @Override
-        public Map<String, Object> build(final RunContextLogger logger) {
+        public Map<String, Object> build(final RunContextLogger logger, final PropertyContext propertyContext) {
             ImmutableMap.Builder<String, Object> builder = ImmutableMap.builder();
 
-            builder.put("envs", envs != null ? envs : Map.of());
+            builder.put(ENVS, envs != null ? envs : Map.of());
             builder.put("globals", globals != null ? globals : Map.of());
 
             // Flow
             if (flow != null) {
                 builder.put("flow", RunVariables.of(flow));
-                if (flow.getVariables() != null) {
-                    builder.put("vars", flow.getVariables());
-                }
             }
 
             // Task
@@ -196,83 +372,69 @@ public final class RunVariables {
                 builder.put("trigger", RunVariables.of(trigger));
             }
 
-            // Parents
-            if (taskRun != null && execution != null) {
-                List<Map<String, Object>> parents = execution.parents(taskRun);
-                builder.put("parents", parents);
-                if (!parents.isEmpty()) {
-                    builder.put("parent", parents.getFirst());
-                }
-            }
-
             // Execution
             if (execution != null) {
-                ImmutableMap.Builder<String, Object> executionMap = ImmutableMap.builder();
+                // The real execution will be used to retrieve the execution context, including triggers and inputs as they are omitted by the Execution.loopExecution method for performance reasons
+                var realExecution = execution.getLoopRun() != null ? execution.getLoopRun().parent() : execution;
 
-                executionMap.put("id", execution.getId());
+                // Parents
+                if (taskRun != null) {
+                    List<Map<String, Object>> parents = parents(execution, taskRun);
+                    builder.put("parents", parents);
+                    if (!parents.isEmpty()) {
+                        builder.put("parent", parents.getFirst());
+                    }
+                }
 
-                Optional.ofNullable(execution.getState()).map(State::getStartDate)
-                    .ifPresent(startDate -> executionMap.put("startDate", startDate));
+                builder.put("execution", RunVariables.of(realExecution));
 
-                Optional.ofNullable(execution.getOriginalId())
-                    .ifPresent(originalId -> executionMap.put("originalId", originalId));
-
-                builder.put("execution", executionMap.build());
-
-                if (execution.getTaskRunList() != null) {
-                    Map<String, Object> outputs = new HashMap<>(execution.outputs());
+                if (!MapUtils.isEmpty(outputs)) {
                     if (decryptVariables) {
                         final Secret secret = new Secret(secretKey, logger);
-                        outputs = secret.decrypt(outputs);
+                        builder.put("outputs", secret.decrypt(outputs));
+                    } else {
+                        builder.put("outputs", outputs);
                     }
-                    builder.put("outputs", outputs);
+                } else {
+                    builder.put("outputs", Collections.emptyMap());
+                }
 
-                    Map<String, Object> tasksMap = new HashMap<>();
-
-                    execution.getTaskRunList().forEach(taskRun -> {
-                        if (taskRun.getState() != null) {
-                            if (taskRun.getValue() == null) {
-                                tasksMap.put(taskRun.getTaskId(), Map.of("state", taskRun.getState().getCurrent()));
-                            } else {
-                                if (tasksMap.containsKey(taskRun.getTaskId())) {
-                                    Map<String, Object> taskRunMap = new HashMap<>((Map<String, Object>) tasksMap.get(taskRun.getTaskId()));
-                                    taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
-                                    tasksMap.put(taskRun.getTaskId(), taskRunMap);
-                                } else {
-                                    tasksMap.put(taskRun.getTaskId(), Map.of(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent())));
-                                }
-                            }
-                        }
-                    });
-
+                if (execution.getTaskRunList() != null || realExecution.getTaskRunList() != null) {
+                    var taskRunList = ListUtils.concat(execution.getTaskRunList(), realExecution.getTaskRunList());
+                    Map<String, Object> tasksMap = computeTasksMap(taskRunList);
                     builder.put("tasks", tasksMap);
                 }
 
                 // Inputs
                 Map<String, Object> inputs = this.inputs == null ? new HashMap<>() : new HashMap<>(this.inputs);
-                if (execution.getInputs() != null) {
-                    inputs.putAll(execution.getInputs());
+                if (realExecution.getInputs() != null) {
+                    inputs.putAll(realExecution.getInputs());
                     if (decryptVariables && flow != null && flow.getInputs() != null) {
                         // if some inputs are of type secret, we decode them
                         final Secret secret = new Secret(secretKey, logger);
                         for (Input<?> input : flow.getInputs()) {
-                            if (input instanceof SecretInput && inputs.containsKey(input.getId())) {
-                                try {
-                                    String decoded = secret.decrypt(((String) inputs.get(input.getId())));
-                                    inputs.put(input.getId(), decoded);
-                                } catch (GeneralSecurityException e) {
-                                    throw new RuntimeException(e);
-                                }
+                            if (input instanceof SecretInput) {
+                                decodeInput(secret, input.getId(), inputs);
                             }
                         }
                     }
                 }
 
                 if (flow != null && flow.getInputs() != null) {
+                    // Create a new PropertyContext with 'flow' variables which are required by some pebble expressions.
+                    PropertyContextWithVariables context = new PropertyContextWithVariables(propertyContext, Map.of("flow", RunVariables.of(flow)));
+
                     // we add default inputs value from the flow if not already set, this will be useful for triggers
                     flow.getInputs().stream()
                         .filter(input -> input.getDefaults() != null && !inputs.containsKey(input.getId()))
-                        .forEach(input -> inputs.put(input.getId(), input.getDefaults()));
+                        .forEach(input ->
+                        {
+                            try {
+                                inputs.put(input.getId(), FlowInputOutput.resolveDefaultValue(input, context));
+                            } catch (IllegalVariableEvaluationException e) {
+                                // Silent catch, if an input depends on another input, or a variable that is populated at runtime / input filling time, we can't resolve it here.
+                            }
+                        });
                 }
 
                 if (!inputs.isEmpty()) {
@@ -281,34 +443,38 @@ public final class RunVariables {
                     // if a secret input is used, add it to the list of secrets to mask on the logger
                     if (logger != null && !ListUtils.isEmpty(secretInputs)) {
                         for (String secretInput : secretInputs) {
-                            String secret = (String) inputs.get(secretInput);
-                            if (secret != null) {
-                                logger.usedSecret(secret);
+                            Object secretValue = inputs.get(secretInput);
+                            if (secretValue != null) {
+                                String secret;
+                                // if decryption is disabled, secret input would be still a map of type and encrypted value
+                                if (!decryptVariables) {
+                                    secret = ((Map<String, String>) secretValue).get("value");
+                                } else {
+                                    secret = (String) secretValue;
+                                }
+                                if (secret != null) {
+                                    logger.usedSecret(secret);
+                                }
                             }
                         }
                     }
                 }
 
-                if (execution.getTrigger() != null && execution.getTrigger().getVariables() != null) {
-                    builder.put("trigger", execution.getTrigger().getVariables());
+                if (realExecution.getTrigger() != null && realExecution.getTrigger().getVariables() != null) {
+                    Map<String, Object> triggerVariables = realExecution.getTrigger().getVariables();
+                    if (decryptVariables) {
+                        final Secret secret = new Secret(secretKey, logger);
+                        triggerVariables = secret.decrypt(triggerVariables);
+                    }
+                    builder.put("trigger", triggerVariables);
                 }
 
                 if (execution.getLabels() != null) {
-                    builder.put("labels", execution.getLabels()
-                        .stream()
-                        .filter(label -> label.value() != null && label.key() != null)
-                        .map(label -> mapLabel(label))
-                        // using an accumulator in case labels with the same key exists: the first is kept
-                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue, (first, second) -> first))
-                    );
-                }
-
-                if (execution.getVariables() != null) {
-                    builder.putAll(execution.getVariables());
+                    builder.put("labels", Label.toNestedMap(execution.getLabels()));
                 }
 
                 if (flow == null) {
-                    Flow flowFromExecution = Flow.builder()
+                    FlowInterface flowFromExecution = GenericFlow.builder()
                         .id(execution.getFlowId())
                         .tenantId(execution.getTenantId())
                         .revision(execution.getFlowRevision())
@@ -316,6 +482,34 @@ public final class RunVariables {
                         .build();
                     builder.put("flow", RunVariables.of(flowFromExecution));
                 }
+
+                // item from Loop
+                if (execution.getLoopRun() != null) {
+                    builder.put("item", RunVariables.of(execution.getLoopRun()));
+                }
+
+                // variables
+                Optional.ofNullable(execution.getVariables())
+                    .or(() -> Optional.ofNullable(flow).map(FlowInterface::getVariables))
+                    .map(HashMap::new)
+                    .ifPresent(variables ->
+                    {
+                        Object fixtureFiles = variables.remove(FIXTURE_FILES_KEY);
+                        builder.put("vars", ImmutableMap.copyOf(variables));
+
+                        if (fixtureFiles != null) {
+                            builder.put("files", fixtureFiles);
+                        }
+                    });
+            } else if (flow != null) {
+                // if the execution is null, we should add flow labels
+                // this is useful for triggers that don't have an execution
+                builder.put("labels", Label.toNestedMap(flow.getLabels()));
+            }
+
+            // Kestra configuration
+            if (kestraConfiguration != null) {
+                builder.put("kestra", RunVariables.of(kestraConfiguration));
             }
 
             // adds any additional variables
@@ -329,24 +523,87 @@ public final class RunVariables {
 
             return builder.build();
         }
-    }
 
-    private static Map.Entry<String, Object> mapLabel(Label label) {
-        if (label.key().startsWith(Label.SYSTEM_PREFIX)) {
-            return Map.entry(
-                label.key().substring(0, Label.SYSTEM_PREFIX.length() - 1),
-                Map.entry(
-                    label.key().substring(Label.SYSTEM_PREFIX.length()),
-                    label.value()
-                )
-            );
-        } else {
-            return Map.entry(
-                label.key(),
-                label.value()
-            );
+        @SuppressWarnings("unchecked")
+        private void decodeInput(Secret secret, String id, Map<String, Object> inputs) {
+            // find the input value that can be nested in case the input has a '.' in it.
+            if (id.indexOf('.') > -1) {
+                String nestedId = id.substring(0, id.indexOf('.'));
+                String restOfId = id.substring(id.indexOf('.') + 1);
+                decodeInput(secret, restOfId, (Map<String, Object>) inputs.get(nestedId));
+            } else if (inputs.containsKey(id)) {
+                try {
+                    Map<String, String> encryptedString = (Map<String, String>) inputs.get(id);
+                    if (encryptedString != null) {
+                        String decoded = secret.decrypt(encryptedString.get("value"));
+                        inputs.put(id, decoded);
+                    }
+                } catch (GeneralSecurityException e) {
+                    throw new RuntimeException(e);
+                }
+            }
+        }
+
+        private List<Map<String, Object>> parents(Execution execution, TaskRun taskRun) {
+            List<TaskRun> parents = execution.findParents(taskRun);
+            Collections.reverse(parents);
+
+            List<Map<String, Object>> result = new ArrayList<>(parents.size());
+            for (TaskRun parent : parents) {
+                Map<String, Object> current = HashMap.newHashMap(2);
+
+                current.put("task", Map.of("id", parent.getTaskId()));
+
+                if (parent.getValue() != null) {
+                    current.put("taskrun", Map.of("value", parent.getValue()));
+                }
+
+                result.add(current);
+            }
+
+            return result;
+        }
+
+        private Map<String, Object> computeTasksMap(List<TaskRun> taskRunList) {
+            Map<String, Object> tasksMap = new HashMap<>();
+            taskRunList.forEach(taskRun ->
+            {
+                if (taskRun.getState() != null) {
+                    if (taskRun.getValue() == null) {
+                        tasksMap.put(taskRun.getTaskId(), Map.of("state", taskRun.getState().getCurrent()));
+                    } else {
+                        if (tasksMap.containsKey(taskRun.getTaskId())) {
+                            @SuppressWarnings("unchecked")
+                            Map<String, Object> taskRunMap = (Map<String, Object>) tasksMap.get(taskRun.getTaskId());
+                            taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
+                            tasksMap.put(taskRun.getTaskId(), taskRunMap);
+                        } else {
+                            Map<String, Object> taskRunMap = new HashMap<>();
+                            taskRunMap.put(taskRun.getValue(), Map.of("state", taskRun.getState().getCurrent()));
+                            tasksMap.put(taskRun.getTaskId(), taskRunMap);
+                        }
+                    }
+                }
+            });
+            return tasksMap;
+        }
+
+        private record PropertyContextWithVariables(
+            PropertyContext delegate,
+            Map<String, Object> variables) implements PropertyContext {
+
+            @Override
+            public String render(String inline, Map<String, Object> variables) throws IllegalVariableEvaluationException {
+                return delegate.render(inline, variables.isEmpty() ? this.variables : variables);
+            }
+
+            @Override
+            public Map<String, Object> render(Map<String, Object> inline, Map<String, Object> variables) throws IllegalVariableEvaluationException {
+                return delegate.render(inline, variables.isEmpty() ? this.variables : variables);
+            }
         }
     }
 
-    private RunVariables(){}
+    private RunVariables() {
+    }
 }
