@@ -1,23 +1,25 @@
 package io.kestra.plugin.core.trigger;
 
-import io.kestra.core.models.Label;
-import io.kestra.core.models.executions.Execution;
-import io.kestra.core.models.flows.State;
-import io.kestra.core.runners.RunContextFactory;
-import io.kestra.plugin.core.debug.Return;
-import io.kestra.core.utils.IdUtils;
-import io.kestra.core.junit.annotations.KestraTest;
-import jakarta.inject.Inject;
-import org.junit.jupiter.api.Test;
-
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.hasItem;
-import static org.hamcrest.Matchers.hasSize;
-import static org.hamcrest.Matchers.is;
+import org.junit.jupiter.api.Test;
+
+import io.kestra.core.junit.annotations.KestraTest;
+import io.kestra.core.models.Label;
+import io.kestra.core.models.executions.Execution;
+import io.kestra.core.models.executions.ExecutionTrigger;
+import io.kestra.core.models.flows.State;
+import io.kestra.core.models.property.Property;
+import io.kestra.core.runners.RunContextFactory;
+import io.kestra.core.utils.IdUtils;
+import io.kestra.plugin.core.debug.Return;
+
+import jakarta.inject.Inject;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 @KestraTest
 class FlowTest {
@@ -36,11 +38,15 @@ class FlowTest {
                     new Label("flow-label-2", "flow-label-2")
                 )
             )
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format("test")
-                .build()))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
@@ -48,6 +54,12 @@ class FlowTest {
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
             .state(State.of(State.Type.RUNNING, Collections.emptyList()))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
@@ -55,15 +67,18 @@ class FlowTest {
             .build();
 
         Optional<Execution> evaluate = flowTrigger.evaluate(
+            Optional.empty(),
             runContextFactory.of(),
             flow,
             execution
         );
 
-        assertThat(evaluate.isPresent(), is(true));
-        assertThat(evaluate.get().getFlowId(), is("flow-with-flow-trigger"));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("flow-label-1", "flow-label-1")));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("flow-label-2", "flow-label-2")));
+        assertThat(evaluate.isPresent()).isTrue();
+        assertThat(evaluate.get().getFlowId()).isEqualTo("flow-with-flow-trigger");
+        assertThat(evaluate.get().getLabels()).hasSize(3);
+        assertThat(evaluate.get().getLabels()).contains(new Label("flow-label-1", "flow-label-1"));
+        assertThat(evaluate.get().getLabels()).contains(new Label("flow-label-2", "flow-label-2"));
+        assertThat(evaluate.get().getLabels()).contains(new Label(Label.CORRELATION_ID, "correlationId"));
     }
 
     @Test
@@ -79,11 +94,15 @@ class FlowTest {
                     new Label("flow-label-2", "flow-label-2")
                 )
             )
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format("test")
-                .build()))
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
@@ -92,6 +111,12 @@ class FlowTest {
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
             .state(State.of(State.Type.RUNNING, Collections.emptyList()))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
@@ -99,16 +124,19 @@ class FlowTest {
             .build();
 
         Optional<Execution> evaluate = flowTrigger.evaluate(
+            Optional.empty(),
             runContextFactory.of(),
             flow,
             execution
         );
 
-        assertThat(evaluate.isPresent(), is(true));
-        assertThat(evaluate.get().getFlowId(), is("flow-with-flow-trigger"));
-        assertThat(evaluate.get().getTenantId(), is("tenantId"));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("flow-label-1", "flow-label-1")));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("flow-label-2", "flow-label-2")));
+        assertThat(evaluate.isPresent()).isTrue();
+        assertThat(evaluate.get().getFlowId()).isEqualTo("flow-with-flow-trigger");
+        assertThat(evaluate.get().getTenantId()).isEqualTo("tenantId");
+        assertThat(evaluate.get().getLabels()).hasSize(3);
+        assertThat(evaluate.get().getLabels()).contains(new Label("flow-label-1", "flow-label-1"));
+        assertThat(evaluate.get().getLabels()).contains(new Label("flow-label-2", "flow-label-2"));
+        assertThat(evaluate.get().getLabels()).contains(new Label(Label.CORRELATION_ID, "correlationId"));
     }
 
     @Test
@@ -117,15 +145,21 @@ class FlowTest {
             .id("flow-with-flow-trigger")
             .namespace("io.kestra.unittest")
             .revision(1)
-            .labels(List.of(
-                new Label("flow-label-1", "flow-label-1"),
-                new Label("flow-label-2", "flow-label-2")
-            ))
-            .tasks(Collections.singletonList(Return.builder()
-                .id("test")
-                .type(Return.class.getName())
-                .format("test")
-                .build()))
+            .labels(
+                List.of(
+                    new Label("flow-label-1", "flow-label-1"),
+                    new Label("flow-label-2", "flow-label-2")
+                )
+            )
+            .tasks(
+                Collections.singletonList(
+                    Return.builder()
+                        .id("test")
+                        .type(Return.class.getName())
+                        .format(Property.ofValue("test"))
+                        .build()
+                )
+            )
             .build();
         var execution = Execution.builder()
             .id(IdUtils.create())
@@ -133,26 +167,37 @@ class FlowTest {
             .flowId("flow-with-flow-trigger")
             .flowRevision(1)
             .state(State.of(State.Type.RUNNING, Collections.emptyList()))
+            .labels(
+                List.of(
+                    new Label("execution-label", "execution"),
+                    new Label(Label.CORRELATION_ID, "correlationId")
+                )
+            )
             .build();
         var flowTrigger = Flow.builder()
             .id("flow")
             .type(Flow.class.getName())
-            .labels(List.of(
-                new Label("trigger-label-1", "trigger-label-1"),
-                new Label("trigger-label-2", "{{ 'trigger-label-2' }}"),
-                new Label("trigger-label-3", "{{ null }}"), // should return an empty string
-                new Label("trigger-label-4", "{{ foobar }}") // should fail
-            ))
+            .labels(
+                List.of(
+                    new Label("trigger-label-1", "trigger-label-1"),
+                    new Label("trigger-label-2", "{{ 'trigger-label-2' }}"),
+                    new Label("trigger-label-3", "{{ null }}"), // should return an empty string
+                    new Label("trigger-label-4", "{{ foobar }}") // should fail
+                )
+            )
             .build();
 
-        Optional<Execution> evaluate = flowTrigger.evaluate(runContextFactory.of(), flow, execution);
+        Optional<Execution> evaluate = flowTrigger.evaluate(Optional.empty(), runContextFactory.of(), flow, execution);
 
-        assertThat(evaluate.isPresent(), is(true));
-        assertThat(evaluate.get().getLabels(), hasSize(5));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("flow-label-1", "flow-label-1")));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("flow-label-2", "flow-label-2")));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("trigger-label-1", "trigger-label-1")));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("trigger-label-2", "trigger-label-2")));
-        assertThat(evaluate.get().getLabels(), hasItem(new Label("trigger-label-3", "")));
+        assertThat(evaluate.isPresent()).isTrue();
+        assertThat(evaluate.get().getLabels()).hasSize(5);
+        assertThat(evaluate.get().getLabels()).contains(new Label("flow-label-1", "flow-label-1"));
+        assertThat(evaluate.get().getLabels()).contains(new Label("flow-label-2", "flow-label-2"));
+        assertThat(evaluate.get().getLabels()).contains(new Label("trigger-label-1", "trigger-label-1"));
+        assertThat(evaluate.get().getLabels()).contains(new Label("trigger-label-2", "trigger-label-2"));
+        assertThat(evaluate.get().getLabels()).doesNotContain(new Label("trigger-label-3", ""));
+        assertThat(evaluate.get().getLabels()).contains(new Label(Label.CORRELATION_ID, "correlationId"));
+        assertThat(evaluate.get().getTrigger()).extracting(ExecutionTrigger::getVariables).hasFieldOrProperty("executionLabels");
+        assertThat(evaluate.get().getTrigger().getVariables().get("executionLabels")).isEqualTo(Map.of("execution-label", "execution"));
     }
 }
